// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> component should render correctly 1`] = `
<div
  className="content"
>
  <h1>
    Medium Content
  </h1>
  <p>
    Lorem ipsum
    <sup>
      <a>
        [1]
      </a>
    </sup>
    dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub
    <sub>
      script
    </sub>
    works as well!
  </p>
</div>
`;

exports[`<Content /> component should support size prop with large 1`] = `
<div
  className="content is-large"
>
  <h1>
    Medium Content
  </h1>
  <p>
    Lorem ipsum
    <sup>
      <a>
        [1]
      </a>
    </sup>
    dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub
    <sub>
      script
    </sub>
    works as well!
  </p>
</div>
`;

exports[`<Content /> component should support size prop with medium 1`] = `
<div
  className="content is-medium"
>
  <h1>
    Medium Content
  </h1>
  <p>
    Lorem ipsum
    <sup>
      <a>
        [1]
      </a>
    </sup>
    dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub
    <sub>
      script
    </sub>
    works as well!
  </p>
</div>
`;

exports[`<Content /> component should support size prop with normal 1`] = `
<div
  className="content"
>
  <h1>
    Medium Content
  </h1>
  <p>
    Lorem ipsum
    <sup>
      <a>
        [1]
      </a>
    </sup>
    dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub
    <sub>
      script
    </sub>
    works as well!
  </p>
</div>
`;

exports[`<Content /> component should support size prop with small 1`] = `
<div
  className="content is-small"
>
  <h1>
    Medium Content
  </h1>
  <p>
    Lorem ipsum
    <sup>
      <a>
        [1]
      </a>
    </sup>
    dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque. Sub
    <sub>
      script
    </sub>
    works as well!
  </p>
</div>
`;
